# cover

./: 163.txt  163_1based.txt  86.txt  CMakeLists.txt  COVERAGE_STRATEGY.md  Makefile  README  README_ACCELERATED.md  anneal.c  anneal.h  anneal_fast.c  anneal_opt.c  arg.c  build_big_cuda.bat  build_compact.bat  build_cover_fast.bat  build_cuda.bat  build_cuda_v2.bat  build_fast.bat  build_ga_cuda.bat  build_memetic.bat  build_mergediff.bat  build_opt.bat  build_parallel.bat  build_pgo.bat  build_ultra.bat  check_redundancy.c  compile_cuda.bat  compile_cuda_v2.bat  cover.c  cover.h  cover.res  cover_big_cuda.cu  cover_big_cuda.exp  cover_big_cuda.lib  cover_cuda.cu  cover_cuda.exp  cover_cuda.lib  cover_cuda_compact.cu  cover_cuda_compact.exp  (+51 more)
tuning_logs/: sol_exp_01.txt  sol_exp_06.txt  sol_exp_08.txt  sol_exp_09.txt  sol_exp_10.txt
tuning_logs/20251221_000941/: quick_results.csv
tuning_logs/20251221_001020/: quick_results.csv
tuning_logs/20251221_002110/: quick_results.csv
tuning_logs/20251221_002840/: quick_results.csv
tuning_logs/20251221_003441/: quick_results.csv
tuning_logs/20251221_004149/: quick_results.csv
tuning_logs/20251221_004326/: exact_results.csv  quick_results.csv
tuning_logs/20251221_010950/: exact_results.csv
